# oc5-deploy-ml

./: .coverage  .coveragerc  .dockerignore  .gitignore  BRANCHING_STRATEGY.md  DATABASE_DESIGN.md  DATABASE_SETUP.md  DATABASE_TESTING.md  Dockerfile  FINALIZATION_PLAN.md  GETTING_STARTED.md  HOW_TO_TEST_API.md  PRESENTATION_SLIDES.md  PROJECT_STATUS.md  README.md  SQLALCHEMY_ALEMBIC_TUTORIAL.md  TODO_v1.1.0.md  alembic.ini.example  alembic.ini.template  coverage.xml  demo_api_locally.py  environment.yml  hello.txt  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  database-tests.yml  database-tests.yml.disabled
alembic/: env.py
alembic/versions/: 20251119_1800_001_initial_schema.py
app/: config.py  database.py  main.py  model_service.py  schemas.py
artifacts/: correlated_features.json
db/: create_db.py  schema.sql
gradio_app/: README.md  app.py
model/: README.md  feature_metadata.json  hr_attrition_xgb_enhanced.joblib  training_report.txt
scripts/: train_model.py
src/: utils_data.py  utils_model.py
src/oc5_ml_deployment/api/: __init__.py  main.py  model_service.py  schemas.py
src/oc5_ml_deployment/api/static/: landing.html
src/oc5_ml_deployment/database/: __init__.py  crud.py  database.py  models.py
tests/: conftest.py  test_api.py  test_api_contracts.py  test_api_errors.py  test_api_integration.py  test_database_crud.py  test_database_integration.py  test_explain.py  test_model_edge_cases.py  test_model_service.py  test_smoke.py
