[project]
name = "oc5-ml-deployment"
version = "0.1.0"
description = "OpenClassrooms project: Déployez un modèle de ML"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Ghislain Delabie", email = "ghislain@delabie.tech" }]

dependencies = [
  "imbalanced-learn>=0.11",
  "shap>=0.46",
  "pyarrow>=15.0",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "xgboost>=3.0.5",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
trees = ["xgboost>=2.0", "catboost>=1.2"]  # install later if needed

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oc5_ml_deployment"]

[tool.hatch.build.targets.sdist]
include = ["src/oc5_ml_deployment", "README.md", "pyproject.toml"]
