[project]
name = "oc5-ml-deployment"
version = "0.1.0"
description = "OpenClassrooms project: Déployez un modèle de ML"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Ghislain Delabie", email = "ghislain@delabie.tech" }]

dependencies = [
  "imbalanced-learn>=0.11",
  "shap>=0.46",
  "pyarrow>=15.0",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "xgboost>=3.0.5",
  "seaborn>=0.13.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
trees = ["xgboost>=2.0", "catboost>=1.2"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oc5_ml_deployment"]
artifacts = ["src/oc5_ml_deployment/api/static/*"]

[tool.hatch.build.targets.sdist]
include = ["src/oc5_ml_deployment", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
markers = [
    "database: tests that require database connection (run only on PR to main)",
    "integration: integration tests",
    "slow: slow running tests",
]
asyncio_mode = "auto"
# By default, skip database tests (run them explicitly with -m database)
addopts = "-m 'not database'"
